# mlops

./: .gitignore  COURSE1_DELIVERY_SUMMARY.md  COURSE_SUMMARY.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PR10_CLOSURE_NOTE.md  PROJECT_EXECUTION_GUIDE.md  README.md
cheatsheets/: ansible.md  aws.md  docker-k8s.md  dvc-mlflow.md  github.md  linux.md  python-env.md
course/: 00-overview.md  00.5-data-engineering-for-beginners.md  01-mlops-foundations.md  02-env-and-packaging.md  03-data-versioning-and-quality.md  04-experiment-tracking-and-reproducibility.md  05-pipelines-orchestration.md  06-model-training-eval-and-selection.md  07-model-registry-and-governance.md  08-serving-and-apis.md  09-batch-streaming-and-scheduled-jobs.md  10-ci-cd-and-environments.md  11-observability-and-monitoring.md  12-drift-detection-and-retraining.md  13-security-compliance-and-cost.md  14-comprehensive-review.md
course1/: IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  requirements.txt  setup.sh
course1/module00-setup/: README.md  transcript.md
course1/module01-foundations/: README.md
course2/: README.md
course2/section01-welcome-agenda-big-picture/: lecture-1.1-course-welcome.md  lecture-1.2-what-is-mlops.md  lecture-1.3-why-mlops.md  lecture-1.4-ml-system-architecture.md  lecture-1.5-mlops-in-data-ai-world.md  lecture-1.6-roles-responsibilities.md  lecture-1.7-course-agenda.md
course2/section02-prerequisites-tools-setup/: lecture-2.1-skills-needed.md  lecture-2.2-tech-stack-overview.md  (+5 more)
exams/: mock-exam-1.md
presentation/: COURSE_PRESENTATION.md  HOW_TO_CONVERT.md  QUICK_START.md  README.md  SUMMARY.md  convert_presentation.sh
project/: .env.example  DATA_ENGINEERING_README.md  DATA_PIPELINE_VISUAL_GUIDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
project/data/processed/: customers_cleaned.csv  customers_with_features.csv
project/data/raw/: customers.csv
project/models/: churn_model.pkl  imputer.pkl  scaler.pkl
project/notebooks/: data_engineering_tutorial.ipynb
project/outputs/: experiment_results.json
project/scripts/: 00_generate_sample_data.py  run_data_pipeline.py
project/serving/: Dockerfile.api  Dockerfile.mlflow  README.md  kserve-inference.yaml
project/src/: api.py
troubleshooting/: triage-matrix.md
(+75 files in other folders)
